changes as required

--- a/CMS.App/CMS.App/Views/_ViewImports.cshtml
+++ b/CMS.App/CMS.App/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using CMS.App
 @using CMS.App.Models
-@using CMS.App.Models.ViewModels
+@using CMS.App.ViewModels
 @using CMS.App.Infrastructure
 @using CMS.App.Components
 @using Microsoft.AspNetCore.Identity
